# SuSG2025-DetectTool

./: .gitignore  README.md  pyproject.toml  pytest.ini
configs/: rules.yaml
docs/: Design.md
examples/logs/: README.md
src/detecttool/: cli.py  config.py  engine.py
src/detecttool/sources/: file_follow.py
src/susg_detecttool.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
tests/: README.md  conftest.py  test_cli.py  test_engine.py  test_stats.py
